<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/background"
        android:id="@+id/fragment1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/displayTextRegister"
                android:text="@string/display_text_register"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fb"
                android:id="@+id/fb_login"
                android:layout_gravity="center"
                android:text="Login with facebook"
                android:paddingTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/OR"
                android:id="@+id/or"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_for"
                android:labelFor="@+id/profile_created_for"
                android:paddingTop="15dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_created_for"
                android:hint="@string/myself"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:labelFor="@+id/name"
                android:paddingTop="5dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/name"
                android:background="@color/white"
                android:inputType="text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/gender"
                android:labelFor="@+id/gender"
                android:paddingTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:orientation="horizontal"
                android:layout_weight="1"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/gender_male"
                    android:textAlignment="center"
                    android:background="@color/white"
                    android:layout_weight="0.4"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_female"
                    android:text="@string/female"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@color/white"
                    android:layout_marginLeft="10dp"
                    />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:labelFor="@+id/dob"
                android:paddingTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dob"
                android:hint="@string/dob"
                android:background="@color/white"
                android:inputType="date"
                android:drawableRight="@drawable/date"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:labelFor="@+id/email"
                android:paddingTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="text"
                android:background="@color/white"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobno"
                android:labelFor="@+id/mobno"
                android:paddingTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobno"
                android:orientation="horizontal"
                android:layout_weight="1">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ccode"
                    android:hint="@string/ccode"
                    android:background="@color/white"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:layout_weight="0.2"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mno"
                    android:hint="@string/mno"
                    android:background="@color/white"
                    android:layout_weight="0.7"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:labelFor="@+id/email"
                android:paddingTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@color/white"
                android:drawableRight="@drawable/eye1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/religion"
                android:labelFor="@+id/religion"
                android:paddingTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/religion"
                android:hint="@string/religion"
                android:inputType="text"
                android:background="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mother_tongue"
                android:labelFor="@+id/mother_tongue"
                android:paddingTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mother_tongue"
                android:hint="@string/mother_tongue"
                android:inputType="text"
                android:background="@color/white"
                />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/agreement"
                android:text="@string/agreement"
                android:paddingTop="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/continue_reg1"
                android:text="@string/continue_reg1"
                android:paddingTop="5dp"
                android:background="@color/material_blue_grey_800"/>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:background="@color/white"
        >
        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Search"
            >
        </EditText>
        <ListView android:id="@+id/drawer_list_reg_step1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            />
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>