<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout2"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/almostDone"
                android:text="@string/almostDone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caste"
                android:labelFor="@+id/caste"
                android:paddingTop="15dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/caste"
                android:hint="@string/caste"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:labelFor="@+id/cast"
                android:paddingTop="15dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/country"
                android:hint="@string/country"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marital_status"
                android:labelFor="@+id/marital_status"
                android:paddingTop="15dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/marital_status"
                android:hint="@string/marital_status"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_button"
                android:text="Are you willing to marry from other community also ?"/>



        </LinearLayout>



    </ScrollView>


    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:background="@color/white"
        >
        <EditText
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Search"
            >
        </EditText>
        <ListView android:id="@+id/drawer_list_reg_step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            />
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>